--- a/style.css
+++ b/style.css
@@ -22,28 +22,20 @@ body {
 }
 
 nav {
-    float: left;
     background-color: #33303f;
     height: 100%;
-    width: 20%;
-    padding: 1%;
+    width: 0;
+    padding-top: 60px;
     position: fixed;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: auto;
-}
-
-nav li a {
-    margin: 5px;
-    padding: 10px 10px;
+nav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 20px;
     font-family: Consolas, monaco, monospace;
     display: block;
     position: fixed;
-    background-color: #33303F;
     color: #FBFAFB;
 }
 
