--- a/style.css
+++ b/style.css
@@ -22,26 +22,38 @@ body {
 }
 
 nav {
-    background-color: #33303f;
     height: 100%;
-    width: 0;
-    padding-top: 60px;
+    width: 20%;
     position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #33303f;
+    padding-top: 20px;
 }
 
 nav a {
-    padding: 8px 8px 8px 32px;
+    padding: 6px 8px 8px 16px;
     text-decoration: none;
     font-size: 20px;
     font-family: Consolas, monaco, monospace;
-    display: block;
-    position: fixed;
     color: #FBFAFB;
+    display: block;
 }
 
 nav li a:hover, .active {
     background-color: #E14658;
     color: #FFFFFF;
+}
+
+@media screen and (max-height: 450px) {
+    nav {padding-top: 10px;}
+    nav a {font-size: 15px;}
+}
+
+.main {
+    margin-left: 160px;
+    padding: 0px 10px;
 }
 
 /* Home Page Formatting */
