--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 20%;
+    width: 200px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -32,7 +32,7 @@ body {
     display: block;
 }
 
-#current {
+.nav #current {
     background-color: #E14658;
     color: #FFFFFF;
 }
@@ -51,10 +51,11 @@ body {
 
 
 .main {
-    margin-left: 160px;
+    margin-left: 100px;
     padding: 0px 10px;
     height: 100%;
-    width: 80%;
+    text-align: center;
+    color: #FBFAFB;
 }
 
 /* Home Page Formatting */
