--- a/style.css
+++ b/style.css
@@ -55,23 +55,24 @@ body {
 
 
 /* Home Page Formatting */
-#home-page {
-    text-align: center;
-}
 
 #main-title h1 {
+    margin-top: 20%;
+    text-align: center;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     font-size: 48px;
     color: #FBFAFB;
 }
 
 #main-title p {
+    text-align: center;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     font-size: 18px;
     color: #FFFFFF;
 }
 
 #status {
+    text-align: center;
     padding: 20px 5px;
     text-decoration: none;
     font-size: 24px;
@@ -82,6 +83,7 @@ body {
 }
 
 #website {
+    text-align: center;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     font-size: 16px;
     color: #FFFFFF;
