--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .nav a {
-    padding: 6px 8px 8px 16px;
+    padding: 10px 10px 8px 16px;
     text-decoration: none;
     font-size: 20px;
     font-family: Consolas, monaco, monospace;
@@ -56,7 +56,7 @@ body {
 }
 
 
-/* Home Page Formatting */
+/* HOME PAGE */
 #main-title h1 {
     margin-top: 20%;
     text-align: center;
@@ -74,13 +74,14 @@ body {
 
 #status {
     text-align: center;
+    max-width: 700px;
     padding: 20px 5px;
     text-decoration: none;
     font-size: 24px;
     font-family: Consolas, monaco, monospace;
     color: #FFFFFF;
     display: block;
-    background-color: #E14658;
+    background-color: rgba(225, 70, 88, .69);
 }
 
 #website {
