--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 #main-title h1 {
     margin-top: 20%;
     text-align: center;
-    font-family: Consolas, monaco, monospace;
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     font-size: 64px;
     color: #FBFAFB;
 }
@@ -125,37 +125,43 @@ body {
 
 /* ABOUT PAGE */
 #about-header {
+    position: fixed;
+    height: 300px;
+    top: 0px;
+    z-index: 1;
+    margin: 0px auto 0px auto;
+    background-color: #E14658;
+}
+
+#about-header h1 {
     text-align: center;
-    margin: 0 auto;
-    padding: 20px 5px;
-    text-decoration: none;
-    z-index: 2;
     font-size: 36px;
+    text-decoration: none;
     font-family: Consolas, monaco, monospace;
     display: block;
-    background-color: #E14658;
     color: #FFFFFF;
-    position: fixed;
 }
 
 #about-text {
-    margin: auto;
-    padding: 20px 100px;
+    position: relative;
+    margin: 300px auto 0px auto;
+    padding: 50px 100px;
+}
+
+#about-text p {
     text-decoration: none;
-    z-index: 3;
+    text-align: left;
     font-size: 18px;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     display: block;
     background-color: #262830;
     color: #FFFFFF;
-    position: fixed;
+
 }
 
 #github-link {
-    margin: auto;
-    padding: 20px 100px;
+    text-align: center;
     text-decoration: none;
-    z-index: 3;
     font-size: 18px;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     color: #FBFAFB;
