--- a/style.css
+++ b/style.css
@@ -103,7 +103,11 @@ body {
     font-family: Consolas, monaco, monospace;
     display: block;
     background-color: #E14658;
+}
+
+.sticky {
     position: fixed;
+    top: 0;
 }
 
 .proj-header .proj-title {
@@ -113,6 +117,11 @@ body {
 }
 
 .proj-header .proj-status {
+    font-size: 18px;
+    color: #FFFFFF;
+}
+
+.proj-header .proj-dates {
     font-size: 18px;
     color: #FFFFFF;
 }
