--- a/style.css
+++ b/style.css
@@ -101,16 +101,14 @@ body {
     text-align: center;
     margin: auto 0;
     padding: 20px 5px;
+    width: 100%;
+    height: 250px;
     text-decoration: none;
     font-family: Consolas, monaco, monospace;
     display: block;
     background-color: #E14658;
     line-height: 1.2;
-}
-
-.sticky {
     position: fixed;
-    top: 0;
 }
 
 .proj-header .proj-title {
@@ -130,7 +128,7 @@ body {
 
 .proj-header .proj-shortcuts {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     font-size: 12px;
     color: #262830;
     text-decoration: none;
@@ -138,6 +136,7 @@ body {
 
 .proj-text {
     margin: auto;
+    margin-top: 250px;
     padding: 20px 100px;
     text-decoration: none;
     z-index: 3;
