--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ body {
 /* PROJECT PAGES */
 .proj-header {
     margin: auto 0;
-    width: 100%;
     height: 250px;
     text-decoration: none;
     font-family: Consolas, monaco, monospace;
@@ -131,8 +130,8 @@ body {
 }
 
 .proj-header .proj-shortcuts a {
-    display: flex;
-    justify-content: space-between;
+    text-align: right;
+    line-height: 1.0;
     font-size: 12px;
     color: #262830;
     text-decoration: none;
