--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ body {
 
 /* PROJECT PAGES */
 .proj-header {
-    margin: auto 0;
-    height: 250px;
+    margin: 0;
+    height: 200px;
     text-decoration: none;
     font-family: Consolas, monaco, monospace;
     display: block;
@@ -129,8 +129,9 @@ body {
     text-align: center;
 }
 
-.proj-header .proj-shortcuts a {
+.proj-header .proj-shortcuts {
     text-align: right;
+    float: right;
     line-height: 1.0;
     font-size: 12px;
     color: #262830;
@@ -138,8 +139,7 @@ body {
 }
 
 .posts {
-    margin: 250px auto auto auto;
-    margin-top: 250px;
+    margin: 200px auto auto auto;
     padding: 20px 100px;
     text-decoration: none;
     z-index: 3;
@@ -150,6 +150,7 @@ body {
     color: #FFFFFF;
     position: fixed;
     text-decoration: none;
+    overflow: scroll;
 }
 
 /* .proj-text a {
