--- a/style.css
+++ b/style.css
@@ -129,18 +129,20 @@ body {
     text-align: center;
 }
 
-.proj-header .proj-shortcuts {
-    text-align: right;
-    float: right;
+.proj-header .proj-shortcuts a {
+    text-align: center;
+    margin: 25px;
+    padding: 10px;
     line-height: 1.0;
     font-size: 12px;
-    color: #262830;
+    color: #E14658;
+    background-color: #FFFFFF;
     text-decoration: none;
 }
 
 .posts {
-    margin: 200px auto auto auto;
-    padding: 20px 100px;
+    margin: 100px auto auto auto;
+    padding: 20px 50px;
     text-decoration: none;
     z-index: 3;
     font-size: 18px;
@@ -182,6 +184,7 @@ body {
     background-color: #262830;
     padding: 50px 50px;
     display: block;
+    margin: auto;
 
     /* 
     position: relative;
