--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 
 .main {
     margin-left: 200px;
-    margin-right: -200px;
     padding: 0px;
     height: 100%;
 }
@@ -102,9 +101,9 @@ body {
 
 /* PROJECT PAGES */
 .proj-header {
-    margin: 0;
+    margin: 0px 0px 0px 0px;
     height: 200px;
-    width: 100%;
+    width: 100% - 20;
     text-decoration: none;
     font-family: Consolas, monaco, monospace;
     display: block;
