--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ body {
 
 /* PROJECT PAGES */
 .proj-header {
+    text-align: center;
+    margin: 0px 0px;
+    padding: 20px 5px;
+    text-decoration: none;
+    display: block;
+    /*
     margin: 0px 0px 0px 0px;
     width: 100%;
     text-decoration: none;
@@ -108,6 +114,7 @@ body {
     background-color: #E14658;
     line-height: 1.2;
     position: fixed;
+    */
 }
 
 .proj-header .proj-title {
