--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    background: #22252c;
     color: #fff;
     transition: all 0.3s;
 }
