--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ html {
     }
 }
 
+/*
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid #2B2B36;
@@ -56,7 +57,7 @@ html {
     color: #fff;
     background: #E14658;
 }
-
+*/
 
 /* HOME PAGE */
 #main-title h2 {
