--- a/style.css
+++ b/style.css
@@ -2,60 +2,69 @@ html {
     scroll-behavior: smooth;
 }
 
-/* NAVIGATION */
-.wrapper {
-    display: flex;
-    width: 100%;
-}
-
-/*visible sidebar*/
-#sidebar {
-    width: 250px;
-    position: fixed;
+/* The sidebar menu */
+.sidebar {
+    height: 100%; 
+    width: 0; 
+    position: fixed; 
+    z-index: 1; 
     top: 0;
     left: 0;
-    height: 100vh;
-    z-index: 999;
-    background: #22252c;
+    background-color: #22252c;
+    overflow-x: hidden;
+    padding-top: 60px; 
+    transition: 0.5s;
+  }
+  
+  /* The sidebar links */
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 18px;
     color: #fff;
-    transition: all 0.3s;
-}
-/*hidden sidebar*/
-#sidebar.active {
-    margin-left: -250px;
-}
-
-/*media query based on screen size*/
-@media (max-width: 768px) {
-    /*hidden*/
-    #sidebar {
-        margin-left: -250px;
-    }
-    /*visible*/
-    #sidebar.active {
-        margin-left: 0;
-    }
-}
-
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #2B2B36;
-}
-
-#sidebar #current {
-    color: #fff;
-    background: #E14658;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
     display: block;
-}
-#sidebar ul li a:hover, a:active {
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidebar a:hover, .active {
     color: #fff;
-    background: #E14658;
-}
+    color: #e14658;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* The button used to open the sidebar */
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #e14658;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+  }
+  
+  .openbtn:hover {
+    background-color: #22252c;
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+  }
 
 
 /* HOME PAGE */
