--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    background-color: #2b2b36;
+    font-family: Consolas, monaco, monospace;
+}
+
 /* The sidebar menu */
 .sidebar {
     height: 100%; 
@@ -14,9 +19,9 @@ html {
     overflow-x: hidden;
     padding-top: 60px; 
     transition: 0.5s;
+    padding-top: 60px;
   }
   
-  /* The sidebar links */
   .sidebar a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -26,13 +31,11 @@ html {
     transition: 0.3s;
   }
   
-  /* When you mouse over the navigation links, change their color */
   .sidebar a:hover, .active {
     color: #fff;
-    color: #e14658;
+    background-color: #e14658;
   }
   
-  /* Position and style the close button (top right corner) */
   .sidebar .closebtn {
     position: absolute;
     top: 0;
@@ -41,7 +44,6 @@ html {
     margin-left: 50px;
   }
   
-  /* The button used to open the sidebar */
   .openbtn {
     font-size: 20px;
     cursor: pointer;
