--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     padding: 10px 15px;
     border: none;
     position: fixed;
+    z-index: 2;
   }
   
   .openbtn:hover {
@@ -91,10 +92,10 @@ body {
 #status {
     text-align: center;
     max-width: 700px;
-    padding: 25px 5px; 
+    padding: 25px 20px 10px 10px; 
     margin: auto;
     text-decoration: none;
-    font-size: 28px;
+    font-size: 26px;
     font-family: Consolas, monaco, monospace;
     color: #FFFFFF;
     display: block;
@@ -121,7 +122,6 @@ body {
     text-decoration: none;
     display: block;
     background-color: #E14658;
-    position: fixed;
 }
 
 .proj-header .proj-title {
@@ -140,7 +140,7 @@ body {
 }
 
 .proj-header .proj-shortcuts a {
-    display: inline-block;
+    float: right;
     text-align: center;
     line-height: 1.0;
     font-size: 12px;
@@ -150,6 +150,7 @@ body {
     border: 5px solid #E14658;
     border-radius: 3px;
     text-align: center;
+    position: fixed;
 }
 
 .posts {
