--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
     text-align: center;
     line-height: 1.0;
     font-size: 12px;
-    color: #fff;
+    color: #CACACD;
     background-color: #e14658;
     text-decoration: none;
     border: none;
