--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
     text-decoration: none;
 }
 
-.proj-shortcuts:hover {
+.proj-shortcuts-top:hover, .proj-shortcuts-bot:hover {
     background-color: #e14658;
 }
 
