--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ body {
 
 .proj-shortcuts-top:hover, .proj-shortcuts-bot:hover {
     background-color: #e14658;
-    padding: 15px 15px;
+    border-radius: 5px;
 }
 
 .post-header {
@@ -173,7 +173,7 @@ body {
     width: auto;
     text-align: left;
     padding: 25px 50px 10px 10px;
-    display: block;
+    display: inline-block;
     font-family: Consolas, monaco, monospace;
     background-color: #2D9282;
     border-radius: 5px 5px 0px 0px;
@@ -192,7 +192,8 @@ body {
 }
 
 .post-title {
-    font-size: 18px;
+    font-size: 20px;
+    text-decoration: bold;
     color: #FFFFFF;
 }
 
@@ -200,6 +201,7 @@ body {
     margin: auto 20px;
     padding: 25px 50px 10px 10px;
     text-align: left;
+    text-indent: 5%
     text-decoration: none;
     font-size: 14px;
     display: block;
